--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,17 @@
             <version>1.1.7</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 </project>
